<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_quantity"
            android:summary="@string/pref_show_quantity_summary"
            android:title="@string/pref_show_quantity_title" />

        <ListPreference
            android:defaultValue="left"
            android:dialogTitle="@string/pref_drag_handle_side_title"
            android:entries="@array/pref_drag_handle_side_entries"
            android:entryValues="@array/pref_drag_handle_side_values"
            android:key="pref_drag_handle_side"
            android:summary="%s"
            android:title="@string/pref_drag_handle_side_title" />
"
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_sort_by_total"
            android:title="@string/pref_sort_by_total_title" />
        
        <Preference 
            android:key="pref_send_feedback"
            android:title="@string/pref_send_feedback_title" >
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/pref_send_feedback_uri" />
            </Preference>

</PreferenceScreen>